--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -327,3 +327,197 @@
 
     
 }
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 760px) {
+
+    body {
+        margin: 2rem 0;
+        line-height: 2rem;
+        padding: 0.2rem;
+    }
+
+    .spacer {
+        height: 5rem;
+    }
+
+    $grid-width: 100%;
+    $gutter-vertical: 1rem;
+    $gutter-horizontal: 1rem;
+
+    .logo-container{
+        text-align: center;
+    }
+    .menu-container {
+        padding-top: 2rem;
+        text-align: center;
+    }
+
+    .menu {
+
+        &__item {
+            padding: 0.5rem 1.5rem;
+
+            a {
+
+                font-size: 1.2rem;
+                letter-spacing: 0;
+                font-family: inherit;
+            }
+
+            &--phone {
+                display:none;
+            }
+        }
+    }
+
+    
+
+    .heading_huge{
+        padding: 1.5rem;
+        font-size: 3.2rem;
+        line-height: 4rem;
+        letter-spacing: 2px;
+        text-align: center;
+    }
+
+
+    .home-box {
+      padding: 2rem 0;
+
+      &__content {
+            background-color: $color-white;
+            padding: 2rem;
+            min-height: 15rem;
+            text-align: center;
+        }
+
+    }
+
+
+    .vimeo-wrapper{
+        margin-top: 10rem;
+    }
+
+    .vimeo-overlay{
+
+        &__heading {
+            top: -7rem;
+            font-size: 3rem;
+            line-height: 3.5rem;
+            color: $color-black;
+            text-shadow: 0 0 0 $color-white;
+        }
+    }
+
+    .about-header {
+        padding: 2rem 0 6rem 0;
+
+        &__heading{
+            font-size: 3rem;
+            line-height: 4rem;
+            letter-spacing: 0.2rem;
+        }
+    
+        .qtext {
+            font-size: 2rem;
+            width: 90%;
+            margin-top: 5rem;
+        }
+    }
+
+    .about-left-team{
+        padding: 0;
+    
+        .qtext {
+            font-size: 2rem;
+            text-align: center;
+            margin: 2rem 0;
+            line-height: 2.4rem;
+        }
+    }
+    
+    .about-main .image-box{
+        margin: 1rem 0;
+    }
+    
+    .project-header__details {
+        padding-top: 1rem;
+    }
+
+    .project-header__description {
+        padding: 2rem 0;
+    }
+
+    .heading_medium {
+        margin-bottom: 1.5rem;
+    }
+
+    .twocol-row {
+        font-size: 1.3rem;
+
+        label {
+            width: 7rem;  
+        }
+    }
+
+
+    .p-section {
+
+        &__title {
+            margin-top: 4rem;
+            margin-bottom: 1rem;
+        }
+
+        &__content {
+
+            &--left, &--right {
+                padding: 0;
+            }
+
+            &--text {
+                color: $color-gray;
+                line-height: 165%;
+                padding-top: 2rem;
+            }
+
+            img {
+                max-width: 100%;
+                
+            }
+        }
+    }
+    .portfolio-box {
+        margin-bottom: 0rem;
+
+        &__more {
+            font-size: 1.6rem;
+            left: 2rem;
+            bottom: 40%;
+        }
+    }
+    .col-xs-12 .portfolio-box {
+        margin-bottom: 2.5rem;
+    }
+
+    h5.qtext {
+        font-size: 2rem;
+        line-height: 2.6rem;
+        text-align: center;
+    }
+
+    .contact-details{ 
+        text-align: center; 
+
+        .twocol-row {
+            width: 80%;
+            margin: 1.5rem auto;
+
+
+            label {
+                display: inline-block;
+            }
+        }
+    }
+}
